# MemeWars-Indiedotfun

./: .gitignore  Anchor.toml  README.md  WSL_SETUP.md  package-lock.json  package.json  tsconfig.json
programs/memewars/: Cargo.toml
programs/memewars/src/: constants.rs  instructions.rs  lending.rs  lib.rs  pyth.rs  state.rs
programs/memewars/src/lending/: marinade.rs
scripts/: build.ps1  build.sh  close-and-redeploy.sh  create-env-example.sh  create-new-program.sh  deploy-devnet.ps1  deploy-devnet.sh  fix-authority.sh  fix-solana-rust.ps1  get-marinade-accounts.ts  get-marinade-devnet.ps1  get-marinade-mainnet.ps1  install-solana.ps1  load-env.ts  marinade-constants.ts  setup-env.ps1  setup-env.sh  test-devnet.sh  test-marinade-mainnet.ts
tests/: memewars-full.ts  memewars-marinade.ts  memewars.ts
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/history/: page.tsx
web/src/app/leaderboard/: page.tsx
web/src/components/: BattleCard.tsx  DepositModal.tsx  Header.tsx  WalletProvider.tsx  index.ts
web/src/hooks/: useProgram.ts
web/src/lib/: program.ts
