[package]
name = "memewars"
version = "0.1.0"
description = "MemeWars - Thị Trường Dự Đoán Không Mất Vốn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memewars"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

