[package]
name = "memewars"
version = "0.1.0"
description = "MemeWars - Thị Trường Dự Đoán Không Mất Vốn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memewars"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

